@@ -1,3 +1,8 @@
+2002-04-11  jacob berkman  <jacob@ximian.com>
+
+	* gnome-settings-accessibility-keyboard.c: only do xkb calls if
+	xkb is present (better fix for previous commit)
+
 2002-04-11  Jody Goldberg <jody@gnome.org>
 
 	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) : be
